Fix header on mobile;

--- a/_sass/_custom.scss
+++ b/_sass/_custom.scss
@@ -1,3 +1,9 @@
+body {
+    overflow-x: hidden;
+    * {
+        overflow: hidden;
+    }
+}
 .h-100 {
     height: 100% !important;
 }
@@ -10,9 +16,22 @@
     overflow: hidden;
 }
 
-.header-content {
-    background-color: rgba(0,0,0,.6);
-    padding: 20px 50px !important;
+header {
+    .header-content {
+        background-color: rgba(0,0,0,.6);
+        padding: 20px 50px !important;
+        a.btn {
+            margin: 0 40px;
+        }
+        @media (max-width: 768px) {
+            h1 {
+                margin-top: 50px !important;
+            }
+            a.btn {
+                margin: 0 0 20px;
+            }
+        }
+    }
 }
 
 header.narrow {
@@ -43,6 +62,7 @@ header.narrow {
     @media (max-width: 768px) {
         h1 {
             background-color: rgba(0,0,0,.6);
+            margin-top: 0 !important;
         }
     }
 }
